--- a/index.html
+++ b/index.html
@@ -1,22 +1,23 @@
 <!DOCTYPE html>
 <html lang="en">
-    <link rel="stylesheet" href="main.css">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <link rel="stylesheet" href="main.css" />
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Spacestagram</title>
-</head>
-<body>
+  </head>
+  <body>
     <main class="gallery">
-        <h3 class="gallery__heading">Spacestagram</h3>
-        <p class="gallery__description">Brought to you by NASA's image API</p>
-        <article class="gallery__grid">
-            <div class="gallery__loader">
-                <img src="loading-buffering.gif">
-            </div>
-            <!-- Grid cards are dynamically populated using JS -->
-        </article> 
+      <h3 class="gallery__heading">Spacestagram</h3>
+      <p class="gallery__description">Brought to you by NASA's image API</p>
+      <div class="gallery__loader">
+        <img src="loading-buffering.gif" />
+        <div class="gallery__loader__msg">Patience is a virtue.</div>
+      </div>
+      <article class="gallery__grid">
+        <!-- Grid cards are dynamically populated using JS -->
+      </article>
     </main>
     <script src="main.js"></script>
-</body>
+  </body>
 </html>
