--- a/index.html
+++ b/index.html
@@ -9,15 +9,23 @@
   <body>
     <main class="gallery">
       <h3 class="gallery__heading">Spacestagram</h3>
-      <p class="gallery__description">Brought to you by NASA's image API</p>
+      <p class="gallery__description">
+        Brought to you by NASA's image API
+        <br />
+        Demo by Kunal Dewan :)
+      </p>
       <div class="gallery__loader">
-        <img src="loading-buffering.gif" />
-        <div class="gallery__loader__msg">Patience is a virtue.</div>
+        <img
+          src="loading-buffering.gif"
+          alt="A spinning indicating loading screen."
+        />
+        <br />
+        <span class="gallery__loader__msg">Ringing up NASA....</span>
       </div>
       <article class="gallery__grid">
         <!-- Grid cards are dynamically populated using JS -->
       </article>
     </main>
-    <script src="main.js"></script>
+    <script type="module" src="main.js"></script>
   </body>
 </html>
