File structure changes

--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
 
       <div class="gallery__loader">
         <img
-          src="loading-buffering.gif"
+          src="assets/loading-buffering.gif"
           alt="A spinner indicating loading screen."
         />
         <hr />
